# system-uuid

./: ACKNOWLEDGEMENTS  MacroMacros.hs  Macros.hs  Main.hs  Messages.hs  Options.hs  README  system-uuid.cabal
Data/: UUID.hs
Data/UUID/: Bytes.hs
System/UUID/: Bytes.hs  FromForeign.hs  V1.hs  V4.hs
doc/: Making Cross Platform Haskell Libraries
